feat(api): add update vcluster info interface
